Fix: change max-width of skills and personal-info sections to 100% to fix wrapping on mobile

--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -205,7 +205,7 @@ header {
     }
     .personal-info {
         flex: 0 0 60%;
-        max-width: 60%;
+        max-width: 100%;
         margin-top: 2rem;
         .info-container {
             display: flex;
@@ -214,7 +214,7 @@ header {
         }
         .info-item {
             flex: 0 0 50%;
-            max-width: 50%;
+            max-width: 100%;
             padding: 10px 0;
             p {
                 font-weight: 700;
@@ -226,7 +226,7 @@ header {
     }
     .skills {
         flex: 0 0 40%;
-        max-width: 40%;
+        max-width: 100%;
         margin-top: 2rem;
         .skill-item {
             flex: 0 0 100%;
